--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,7 +3,6 @@ html {
     margin: 0;
     padding: 0;
     height: 100%;
-    overflow: hidden;
 }
 
 .title {
@@ -38,9 +37,9 @@ html {
 }
 
 #meme {
-    display: block;
-    max-width: 100%;
-    max-height: 100%;
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 footer {
